--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="display">12345</div>
+        <div id="display"></div>
         <div class="buttons">
             <div class="button-row">
                 <button class="number">7</button>
@@ -31,8 +31,12 @@
             <div class="button-row">
                 <button class="number">0</button>
                 <button class="clear">CL</button>
-                <button class="operator">=</button>
+                <button class="equals">=</button>
                 <button class="operator">+</button>
+            </div>
+            <div class="button-row">
+                <button id="decimal-point">.</button>
+                <button id="backspace">←</button>
             </div>
         </div>
     </div>
